--- a/powerplan/templates/base.html
+++ b/powerplan/templates/base.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>title</title>
+    <title>{% block title %}{% endblock %}</title>
     <style type="text/css">
-   
+         body {
+            margin: 20px;
+            font-family: Helvetica, Arial, sans-serif;
+        }
     </style>
   </head>
   <body>
