first pass at test schedules for discussion

--- a/powerplan/templates/base.html
+++ b/powerplan/templates/base.html
@@ -9,6 +9,7 @@
             margin: 20px;
             font-family: Helvetica, Arial, sans-serif;
         }
+        {% block style %}{% endblock %}
     </style>
   </head>
   <body>
